assets/chat/css/style.scss
/* ... */
.pref-taggedvisibility .msg-tagged:not(.msg-highlight) {
    background-color: $color-chat-tagged;
    padding-top: 2.7px;
    padding-bottom: 2.4px;

    $border-highlight: mix( white, $color-chat-tagged, 2 );
    border-top: 1px solid $border-highlight;
    border-bottom: 1px solid $border-highlight;

    .greentext {
        color: $color-green-text-highlight;
    }

    .time {
        color: $color-chat-text3;
    }
}
.msg-tagged:before {
    position: absolute;
    top:0;
    left:0;
    bottom:0;
    min-width: 4px;
    display: block;
    background: map-get( $tag-color-map, black );
    content: '';
}
.pref-taggedvisibility .msg-tagged,
.msg-tagged.msg-highlight {
    &::before {
        top: -1px;
        bottom: -1px;
    }
}
.pref-taggedvisibility .msg-tagged.msg-continue,
.msg-highlight.msg-continue,
.msg-own.msg-continue {
    .text:before {
        color: lighten( $color-chat-disabled, 20 );
    }
}

@each $name, $color in $tag-color-map {
    .msg-tagged-#{$name} {
        &:before {
            background-color: $color;
        }

        @at-root .chat:not(.pref-showtime) & a.user {
            border-left-color: mix( $color, black, 18 );
        }
    }
}

/* Historical messages */
.msg-historical {
    color: $text-color1;
}
.msg-historical:before {
    background: none !important;
}
.msg-historical .time {
    display: inline !important;
}
.chat-output:not(.chat-win-main) {
    .msg-historical {
        background-color: $color-chat-emphasize;
        color: $color-chat-text1;
    }
    .msg-historical.msg-own {
        background: none !important;
        color: $color-chat-text2;
    }
}

/* Broadcasts */
.msg-broadcast {
    text-shadow: 1px 1px 3px rgba(0,0,0,1);
    background-color: $color-chat-emphasize;
    color: $color-text-broadcast !important;
    font-size: 110%;
    font-weight: 400;
    padding-top: 6px;
    padding-bottom: 6px;
    time {
        margin-right: 5px;
    }
}

/* Highlight */
.msg-highlight {
    color: #CCC;
    background-color: $color-chat-highlight;
    padding-top: 2.7px;
    padding-bottom: 2.4px;
    margin-bottom: 3px;

    $border-highlight: mix( white, $color-chat-highlight, 3 );
    border-top: 1px solid $border-highlight;
    border-bottom: 1px solid $border-highlight;

    .time {
        color: lighten( $color-chat-time, 18 );
    }

    .greentext {
        color: $color-green-text-highlight;
    }
}
.pref-taggedvisibility .msg-highlight {
    background-color: $color-chat-highlight;
}

/* Focus or highlight a line */
.focus-user .msg-chat {
    opacity:0.3;
}

/* Emotes and combo */
.chat-emote {
    background-repeat: no-repeat;
    background-position-x: center;
    display: inline-block;
    position: relative;
    z-index: 1;
    top: 10px;
    margin-left: 2px;
    margin-right: 2px;
    overflow: hidden;
    text-indent: -90000px;
    vertical-align: middle;
    padding-left: 0.5em;
    image-rendering: -moz-crisp-edges;
}
.chat-combo {
    color: $color-chat-text1;
    display: inline-block;
    position: relative;
    line-height: 34px;
    padding-left: 5px;
    i {
        font-style: normal;
        display: inline-block;
        vertical-align: middle;
    }
    .hit,
    .combo,
    .count,
    .x {
        text-shadow:
                -1px -1px 0 #000,
                1px -1px 0 #000,
                -1px 1px 0 #000,
                1px 1px 0 #000;
    }
    .combo {
        display: none;
        color: $text-color1;
        font-weight: normal;
    }
    .hit {
        color: $color-light;
        animation: emote-hit 600ms 1;
        font-style: italic;
        text-transform: uppercase;
        margin-left: 0;
        letter-spacing: 0.05em;
        display: inline-block;
    }
    .count {
        font-size: $text-size-lg;
        letter-spacing: -0.05em;
        font-weight: bold;
    }
    &.x5 {
        .count {
            font-size: 150%;
        }
    }
    &.x10 {
        .count {
            font-size: 200%;
        }
        .combo {
            font-weight: bold;
        }
    }
    &.x20 {
        .count {
            font-size: 300%;
        }
        .combo {
            font-weight: bold;
        }
    }
    &.x30 {
        .count {
            font-size: 400%;
        }
        .combo {
            font-weight: bold;
        }
    }
    &.x50 {
        .count {
            font-size: 500%;
        }
        .combo {
            font-weight: bold;
        }
    }
    &.combo-complete {
        &.x10,
        &.x20,
        &.x30,
        &.x50 {
            animation: emote-greyout 3500ms 1;
            background: transparent url("/assets/chat/img/emote-splat.png") no-repeat center center;
            background-size: 100% 100%;
            filter: grayscale(100%);
            .combo {
                color: $color-light;
                margin-left: 5px;
            }
        }
        .combo {
            animation: emote-complete 1000ms 1;
            display: inline-block;
        }
        .hit {
            display: none;
        }
    }
}

/* Helpers */
.chat-scroll-notify {
    color: $color-chat-text3;
    background: $color-surface-dark3;
    position: absolute;
    bottom: 0;
    left: 4px;
    right: 4px;
    margin: 4px;
    margin-bottom: 7px;
    text-align: center;
    cursor: pointer;
    z-index: 130;
    border-radius: 3px;
    box-shadow: -1px 3px 5px #000;
    line-height: 25px;

    transition-duration: 100ms;
    transition-property: opacity, transform, visibility;
    visibility: hidden;
    opacity: 0;
    transform: translateY(20px);

    /* Extends clickable area on the bottom */
    &::after {
        content: '';
        display: block;
        height: 8px;
        position: absolute;
        width: 100%;
        margin-top: -1px;
    }
}
.chat-scroll-notify:hover {
    color: $color-chat-text1;
}
#chat.chat-autocomplete-in .chat-scroll-notify  {
    display: none;
}
/* ... */

